fixed /about padding on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -3,6 +3,9 @@
 	margin-top: $mobile-nav-height;
 	margin-bottom: $margin-xs;
 	padding: 0;
+	h4 {
+		padding: 0 1em;
+	}
 	p {
 		margin-bottom: $margin-s;
 
@@ -12,7 +15,7 @@
 		font-weight: 400;
 		line-height: 1.6;
 		color: $text-color;
-		padding: $margin-xs;
+		padding: 0 1em;
 	}
 	a {
 		color: $secondary;
