--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -50,8 +50,7 @@ $github: #666;
 
 // Text colors
 
-$text-color: rgba(0,0,0,.8);
-$link-color: lighten($orange,20%);
+$text-color: rgba(0,0,0,.7);
 
 // Text sizes
 
@@ -64,7 +63,7 @@ $textSize: 1rem;
 
 // Font Families
 
-$sans:  Helvetica, 'Open Sans', Arial, sans-serif;
+$sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
 
